--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,76 @@ body {
 .list {
   list-style: none;
 }
+
+.header {
+}
+.header_navigation {
+}
+.header-logo {
+}
+.header-list {
+}
+.header-item {
+}
+.header-link {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;  
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+.adress {
+}
+.adress-list {
+}
+.adress-item {
+}
+.adress-link {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+.hero {
+}
+.hero-title {
+}
+.hero-button {
+}
+.features {
+}
+.features-list {
+}
+.features-item {
+}
+.features-subtitle {
+}
+.features-text {
+}
+.doing {
+}
+.doing-title {
+}
+.doing-list {
+}
+.doing-item {
+}
+.team {
+}
+.team-title {
+}
+.team-list {
+}
+.team-item {
+}
+.team-subtitle {
+}
+.team-text {
+}
+.footer {
+}
+.footer-logo {
+}
+.footer-text {
+}
